feat: implement authentication with redis
