# internal/controller/user/user_controller_impl.go
@@ -23,40 +23,6 @@ func NewUserController(router *gin.RouterGroup, userService user.UserService) {
 	router.PUT("/:id", controller.UpdateUser)
 	router.DELETE("/:id", controller.DeleteUser)
 	router.GET("/:id", controller.GetUserByID)
-	router.POST("/signup", controller.CreateUser)
-}
-
-//	@Summary		Create user
-//	@Description	Create user
-//	@Tags			user
-//	@Accept			json
-//	@Produce		json
-//	@Param			body	body		request.CreateUserRequest	true	"Create User"
-//	@Success		200		{object}	http.Response
-//	@Failure		400		{object}	http.Error
-//	@Failure		404		{object}	http.Error
-//	@Failure		500		{object}	http.Error
-//	@Router			/users/signup [post]
-func (u *UserControllerImpl) CreateUser(ctx *gin.Context) {
-	var req request.CreateUserRequest
-	if err := ctx.ShouldBindJSON(&req); err != nil {
-		ctx.JSON(http.StatusBadRequest, gin.H{
-			"error": err.Error(),
-		})
-		return
-	}
-
-	err := u.UserService.Create(ctx, req)
-	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, gin.H{
-			"error": err.Error(),
-		})
-		return
-	}
-
-	ctx.JSON(http.StatusOK, gin.H{
-		"message": "User created",
-	})
 }
 
 //	@Summary		Update user
