# internal/http/request/user.go
@@ -1,11 +1,5 @@
 package request
 
-type CreateUserRequest struct {
-	Username string `json:"username"`
-	Password string `json:"password"`
-	Email    string `json:"email"`
-}
-
 type UpdateUserRequest struct {
 	Username string `json:"username"`
 	Password string `json:"password"`
